fix(core): update flow when passing flow-path on command line